--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 This is my first API on GitHub.
-This API allows you to get a list enconded in JSON that include the list of all films having the some name with the desired film sended in the request.
+This API allows you to get a list enconded in JSON that include the list of all films having the same name with the desired film sended in the request.
 The result will be JSON Object that include the title of the films, year of production, The poster of the film and the ID of each film on IMDB
